--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,130 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Welcome to Hyperscript"
+description: "Automated agent-based trading on Hyperliquid - unlock advanced trading strategies for everyone, beginner to pro"
 ---
 
-## Setting up
+## Automated Trading for Everyone
 
-Get your documentation site up and running in minutes.
+Hyperscript bridges the gap between manual trading and professional automation with a comprehensive suite of tools designed for every trader level.
 
 <Card
-  title="Start here"
+  title="Quick Start Guide"
   icon="rocket"
-  href="/quickstart"
+  href="/getting-started/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Get up and running with your first trading bot in minutes.
 </Card>
 
-## Make it yours
+## Trading Strategies by Experience Level
 
-Design a docs site that looks great and empowers your users.
+Choose the right tools for your trading experience and goals.
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="🟢 Beginner Strategies"
+    icon="seedling"
+    href="/trading-strategies/smart-portfolio-rebalancer"
   >
-    Edit your docs locally and preview them in real time.
+    Smart Portfolio Rebalancing and DCA bots with simple, no-code setup.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="🟠 Intermediate Strategies"
+    icon="chart-line"
+    href="/trading-strategies/grid-trading"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Grid and Martingale bots with configurable risk modes and advanced settings.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
+    title="🔴 Advanced Strategies"
     icon="code"
-    href="/essentials/code"
+    href="/trading-strategies/signal-based-trading"
   >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
+    Signal-based trading with PineScript integration and custom scripting.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Powerful Market Intelligence
+
+Our proprietary orderbook signal engine provides insights unavailable anywhere else.
+
+<Columns cols={2}>
+  <Card
+    title="Orderbook Signal Engine"
+    icon="radar"
+    href="/signals/orderbook-signal-engine"
+  >
+    Real-time market conditions, momentum, and liquidation signals from full
+    Hyperliquid orderbook indexing.
+  </Card>
+  <Card
+    title="Technical Indicators"
+    icon="chart-mixed"
+    href="/signals/technical-indicators"
+  >
+    Advanced technical analysis tools including microstructure insights and
+    liquidity analytics.
+  </Card>
+  <Card
+    title="Trading Wizard"
+    icon="magic-wand"
+    href="/trading-strategies/trading-wizard"
+  >
+    LLM-powered assistant that generates bot configs via chat based on your
+    trading philosophy and risk tolerance.
+  </Card>
+  <Card
+    title="Strategy Marketplace"
+    icon="store"
+    href="/marketplace/strategy-marketplace"
+  >
+    Discover, share, and monetize trading strategies with our community
+    marketplace.
+  </Card>
+</Columns>
+
+## Key Features
+
+Everything you need for professional automated trading.
+
+<Columns cols={2}>
+  <Card
+    title="Portfolio Dashboard"
+    icon="chart-pie"
+    href="/portfolio/dashboard"
+  >
+    Track performance, analyze returns, and manage your entire trading portfolio
+    in one place.
+  </Card>
+  <Card
+    title="Backtesting Engine"
+    icon="clock-rotate-left"
+    href="/advanced/backtesting-engine"
+  >
+    Test your strategies against historical data before deploying real capital.
+  </Card>
+  <Card
+    title="Risk Management"
+    icon="shield-check"
+    href="/portfolio/risk-management-tools"
+  >
+    Comprehensive risk controls and portfolio protection tools.
+  </Card>
+  <Card
+    title="PineScript Integration"
+    icon="plug"
+    href="/advanced/pinescript-integration"
+  >
+    Execute TradingView PineScript strategies via webhook integration.
+  </Card>
+</Columns>
+
+## Ready to Start Trading?
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Launch Hyperscript App"
+  icon="external-link"
+  href="https://app.hyperscript.xyz"
 >
-  Browse our showcase of exceptional documentation sites.
+  Access the full trading platform and start automating your strategies today.
 </Card>
