--- a/marketplace/publishing-strategies.mdx
+++ b/marketplace/publishing-strategies.mdx
@@ -14,12 +14,14 @@ Publishing your successful trading strategies on the Hyperscript marketplace cre
 - Monthly subscription fees from strategy users
 - Bonus rewards for top-performing strategies
 - Build a sustainable income stream from trading expertise
+
 </Card>
 
 <Card title="Community Impact" icon="users">
   **Help other traders succeed:** - Share proven strategies with the community -
   Democratize access to professional trading approaches - Build reputation as a
   skilled trader and educator - Contribute to the collective knowledge base
+
 </Card>
 
 <Card title="Strategy Validation" icon="check-circle">
@@ -27,6 +29,7 @@ Publishing your successful trading strategies on the Hyperscript marketplace cre
   strategy performance - Community feedback for improvement opportunities -
   Larger-scale testing across diverse market conditions - Professional review
   and optimization suggestions
+
 </Card>
 
 <Card title="Passive Scaling" icon="chart-line-up">
@@ -35,7 +38,9 @@ Publishing your successful trading strategies on the Hyperscript marketplace cre
 - Earn from strategies without deploying personal funds
 - Test strategies at scale with reduced personal risk
 - Build a portfolio of income-generating strategies
+
 </Card>
+
 </CardGroup>
 
 ## Creator Requirements
@@ -49,13 +54,15 @@ To maintain marketplace quality, creators must meet specific requirements:
 **Basic eligibility for strategy publishing:**
 
 <CheckList>
-- **Verified Hyperscript account** (minimum 3 months active)
-- **Live trading history** (minimum 6 months of documented results)
-- **Positive community standing** (good reputation, no violations)
-- **Identity verification** (KYC compliance for revenue sharing)
-- **Contact information** (responsive support for subscribers)
-- **Tax compliance** (appropriate tax documentation for earnings)
+  - **Verified Hyperscript account** (minimum 3 months active) - **Live trading
+  history** (minimum 6 months of documented results) - **Positive community
+  standing** (good reputation, no violations) - **Identity verification** (KYC
+  compliance for revenue sharing) - **Contact information** (responsive support
+  for subscribers) - **Tax compliance** (appropriate tax documentation for
+  earnings)
+
 </CheckList>
+
 </Accordion>
 
 <Accordion icon="chart-line" title="Performance Requirements">
@@ -94,7 +101,9 @@ Minimum Performance Criteria:
 - **Market Analysis Skills**: Understanding of market dynamics
 - **Technical Implementation**: Ability to automate and optimize strategies
 - **Community Engagement**: Willingness to support subscribers
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Strategy Preparation
@@ -145,7 +154,8 @@ Live Performance Documentation:
 - **Transaction Cost Analysis**: Include realistic slippage and fees
 - **Stress Testing**: Performance during market crashes and volatility spikes
 - **Monte Carlo Analysis**: Statistical validation of results
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="microscope" title="Strategy Analysis Report">
 **Detailed strategy breakdown:**
@@ -180,6 +190,7 @@ Strategy Analysis Template:
 ```
 
 </Accordion>
+
 </AccordionGroup>
 
 ### Strategy Documentation
@@ -198,7 +209,8 @@ Create comprehensive documentation for potential subscribers:
 - **FAQ Section**: Answers to frequently asked questions
 - **Performance Expectations**: Realistic return and risk projections
 - **Support Contact**: How subscribers can reach you for help
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="video" title="Educational Content">
 **Supplementary learning materials:**
@@ -209,7 +221,9 @@ Create comprehensive documentation for potential subscribers:
 - **Performance Review**: Analysis of recent trading results
 - **Q&A Sessions**: Recorded community interaction sessions
 - **Case Studies**: Detailed analysis of specific trading scenarios
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Publishing Process
@@ -254,7 +268,9 @@ Creator Application Checklist:
 - **Pricing Model**: Chosen subscription and fee structure
 - **Target Audience**: Intended subscriber profile and experience level
 - **Marketing Materials**: Strategy description and promotional content
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Review Process
@@ -298,7 +314,8 @@ Review Process Timeline:
 - **Documentation Quality**: Clear, complete, and accurate information
 - **Originality**: Novel approach or significant improvement over existing strategies
 - **Scalability**: Ability to work across different account sizes
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="users" title="Community Beta Testing">
 **Limited release for feedback:**
@@ -309,7 +326,9 @@ Review Process Timeline:
 - **Documentation Refinement**: Update materials based on feedback
 - **Performance Validation**: Confirm strategy works as described
 - **Issue Resolution**: Address any problems discovered during testing
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Revenue Models & Pricing
@@ -413,6 +432,7 @@ Tiered Pricing Example:
 **Best For**: Complex strategies with extensive educational value
 
 </Accordion>
+
 </AccordionGroup>
 
 ### Pricing Strategy Guidelines
@@ -426,6 +446,7 @@ Set competitive and fair pricing for your strategies:
 - Analyze subscriber feedback on existing offerings
 - Consider your unique value proposition
 - Factor in your track record and reputation
+
 </Card>
 
 <Card title="Value-Based Pricing" icon="star">
@@ -434,7 +455,9 @@ Set competitive and fair pricing for your strategies:
 - Consider time and effort saved
 - Factor in risk reduction benefits
 - Account for learning and education value
+
 </Card>
+
 </CardGroup>
 
 ## Creator Success Strategies
@@ -453,7 +476,8 @@ Establish yourself as a trusted and skilled creator:
 - **Continuous Improvement**: Refine strategies based on market changes
 - **Risk Management**: Prioritize capital preservation over returns
 - **Market Adaptation**: Adjust strategies for changing conditions
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="handshake" title="Subscriber Relationships">
 **Build strong community connections:**
@@ -464,7 +488,9 @@ Establish yourself as a trusted and skilled creator:
 - **Community Engagement**: Participate in discussions and forums
 - **Feedback Integration**: Listen to and implement subscriber suggestions
 - **Personal Availability**: Offer direct access for premium subscribers
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Marketing Your Strategies
@@ -480,6 +506,7 @@ Attract subscribers to your marketplace offerings:
 - Social media trading insights
 - Podcast appearances
 - Community forum contributions
+
 </Card>
 
 <Card title="Performance Showcasing" icon="chart-line">
@@ -490,7 +517,9 @@ Attract subscribers to your marketplace offerings:
 - Strategy evolution stories
 - Comparative performance data
 - Risk-adjusted return focus
+
 </Card>
+
 </CardGroup>
 
 ## Ongoing Responsibilities
@@ -510,7 +539,8 @@ Maintain high-quality support for your strategy users:
 - **Documentation Updates**: Keep materials current and accurate
 - **Bug Fixes**: Address any strategy implementation issues
 - **Educational Support**: Help subscribers understand strategy concepts
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="refresh" title="Strategy Maintenance">
 **Keep your strategies current and effective:**
@@ -521,7 +551,9 @@ Maintain high-quality support for your strategy users:
 - **Risk Assessment**: Regularly evaluate and update risk management
 - **Technology Updates**: Keep strategy compatible with platform changes
 - **Documentation Updates**: Maintain current and accurate information
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Creator Analytics & Tools
@@ -572,7 +604,9 @@ Creator Analytics Dashboard:
 - **Analytics Dashboard**: Detailed performance and subscriber metrics
 - **Revenue Tracking**: Earnings and payout management
 - **Feedback System**: Subscriber rating and review management
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Next Steps
@@ -580,6 +614,7 @@ Creator Analytics Dashboard:
 <CardGroup cols={2}>
 <Card title="Strategy Marketplace" icon="store" href="/marketplace/strategy-marketplace">
   Explore existing strategies to understand the marketplace ecosystem.
+
 </Card>
 
 <Card
@@ -588,6 +623,7 @@ Creator Analytics Dashboard:
   href="/advanced/backtesting-engine"
 >
   Test and validate your strategies before publishing.
+
 </Card>
 
 <Card
@@ -596,15 +632,19 @@ Creator Analytics Dashboard:
   href="/portfolio/performance-analytics"
 >
   Understand how to track and analyze strategy performance.
+
 </Card>
 
 <Card title="Community Guidelines" icon="users" href="/guides/community-guidelines">
   Learn about community standards and best practices.
+
 </Card>
+
 </CardGroup>
 
 <Note>
   Publishing strategies on the marketplace is an opportunity to build passive
   income while helping the community. Success requires genuine expertise,
   consistent performance, and dedication to subscriber success.
+
 </Note>{" "}
