--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Markdown syntax'
-description: 'Text, title, and styling in standard markdown'
-icon: 'text-size'
+title: "Markdown syntax"
+description: "Text, title, and styling in standard markdown"
+icon: "text-size"
 ---
 
 ## Titles
@@ -40,10 +40,14 @@ You can combine these. For example, write `**_bold and italic_**` to get **_bold
 
 You need to use HTML to write superscript and subscript text. That is, add `<sup>` or `<sub>` around your text.
 
-| Text Size   | How to write it          | Result                 |
-| ----------- | ------------------------ | ---------------------- |
-| Superscript | `<sup>superscript</sup>` | <sup>superscript</sup> |
-| Subscript   | `<sub>subscript</sub>`   | <sub>subscript</sub>   |
+| Text Size   | How to write it   | Result |
+| ----------- | ----------------- | ------ |
+| Superscript | `<sup>superscript |
+| </sup>`     | <sup>superscript  |
+| </sup>      |
+| Subscript   | `<sub>subscript   |
+| </sub>`     | <sub>subscript    |
+| </sub>      |
 
 ## Linking to pages
 
@@ -84,5 +88,6 @@ Mintlify supports [LaTeX](https://www.latex-project.org) through the Latex compo
 <Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
 
 ```md
-<Latex>8 x (vk x H1 - H2) = (0,1)</Latex>
+<Latex>8 x (vk x H1 - H2) = (0,1)
+</Latex>
 ```
