--- a/marketplace/strategy-marketplace.mdx
+++ b/marketplace/strategy-marketplace.mdx
@@ -18,6 +18,7 @@ The marketplace connects strategy creators with users looking for profitable aut
   4. **Users** subscribe and deploy strategy with their capital 5. **Creator**
   earns revenue share from subscriber profits 6. **Community** benefits from
   shared knowledge and improved strategies
+
 </Info>
 
 ### Marketplace Ecosystem
@@ -49,16 +50,19 @@ Find strategies organized by type and trading approach:
 - Conservative DCA strategies
 - Low-volatility grid trading
 - Yield farming optimizers
+
 </Card>
 
 <Card title="Growth Strategies" icon="chart-line-up">
   **Moderate risk, higher returns:** - Momentum-based trading - Trend following
   systems - Multi-timeframe strategies - Signal-enhanced approaches
+
 </Card>
 
 <Card title="Advanced Strategies" icon="brain">
   **Sophisticated approaches:** - Multi-asset arbitrage - Market making
   strategies - Volatility trading - Complex signal combinations
+
 </Card>
 
 <Card title="Niche Strategies" icon="bullseye">
@@ -67,7 +71,9 @@ Find strategies organized by type and trading approach:
 - Seasonal strategies
 - Cross-chain arbitrage
 - DeFi yield strategies
+
 </Card>
+
 </CardGroup>
 
 ### Strategy Search & Filtering
@@ -112,7 +118,9 @@ Search Filters:
 - **Creator Support**: Responsiveness and helpfulness
 - **Written Reviews**: Detailed user experiences and tips
 - **Performance Comments**: Real user results and modifications
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Strategy Information & Analysis
@@ -165,7 +173,8 @@ Strategy Performance Profile:
 - **Customization Options**: Adjustable risk levels and position sizing
 - **Dependencies**: Requires Hyperscript signal access
 - **Update Frequency**: Strategy parameters updated monthly
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="user" title="Creator Information">
 **Learn about the strategy creator:**
@@ -178,7 +187,9 @@ Strategy Performance Profile:
 - **Creator Bio**: Former traditional finance, specialized in volatility strategies
 - **Verification Status**: Verified creator with track record
 - **Response Time**: Typically responds within 24 hours
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Live Performance Tracking
@@ -188,15 +199,19 @@ Monitor real-time strategy performance from actual subscribers:
 <CardGroup cols={3}>
 <Card title="Aggregate Performance" icon="chart-area">
 Performance across all subscribers using the strategy
+
 </Card>
 
 <Card title="Individual Results" icon="users">
   Anonymized individual subscriber performance ranges
+
 </Card>
 
 <Card title="Recent Activity" icon="activity">
 Latest trades, adjustments, and performance updates
+
 </Card>
+
 </CardGroup>
 
 ## Subscribing to Strategies
@@ -248,7 +263,9 @@ Subscription Models:
 - **Creator Accountability**: Regular performance reviews and standards
 - **Strategy Versioning**: Access to strategy updates and improvements
 - **Risk Disclosure**: Clear risk warnings and historical drawdowns
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Deployment Process
@@ -289,7 +306,9 @@ Deployment Configuration:
 - **Time Restrictions**: Set trading hours and blackout periods
 - **Additional Filters**: Add your own risk management rules
 - **Notification Preferences**: Customize alert settings
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Creating & Publishing Strategies
@@ -303,14 +322,13 @@ Share your successful strategies and earn revenue from the community:
 **Qualifications to publish strategies:**
 
 <CheckList>
-- Verified Hyperscript account (3+ months)
-- Demonstrated trading performance (6+ months live results)
-- Strategy backtesting results (minimum 12 months)
-- Community guidelines agreement
-- Technical documentation completion
-- Risk disclosure statements
-- Responsive customer support commitment
+  - Verified Hyperscript account (3+ months) - Demonstrated trading performance
+  (6+ months live results) - Strategy backtesting results (minimum 12 months) -
+  Community guidelines agreement - Technical documentation completion - Risk
+  disclosure statements - Responsive customer support commitment
+
 </CheckList>
+
 </Accordion>
 
 <Accordion icon="upload" title="Strategy Publishing Process">
@@ -332,7 +350,9 @@ Share your successful strategies and earn revenue from the community:
 - Documentation quality and completeness
 - Creator background and expertise
 - Community benefit and education value
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Revenue Sharing Model
@@ -346,6 +366,7 @@ Earn income from your trading expertise:
 - Monthly subscriptions: Keep 80% of monthly fees
 - One-time purchases: Keep 85% of purchase price
 - Bonus incentives: Extra rewards for top performers
+
 </Card>
 
 <Card title="Performance Incentives" icon="trophy">
@@ -356,7 +377,9 @@ Earn income from your trading expertise:
 - Advanced analytics access
 - Priority platform features
 - Marketing support
+
 </Card>
+
 </CardGroup>
 
 ## Community Features
@@ -375,7 +398,8 @@ Engage with creators and fellow subscribers:
 - **Market Commentary**: How strategy performs in current conditions
 - **Creator Q&A**: Direct interaction with strategy creators
 - **Modification Sharing**: User customizations and variations
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="graduation-cap" title="Educational Content">
 **Learn from strategy creators:**
@@ -386,7 +410,9 @@ Engage with creators and fellow subscribers:
 - **Performance Reviews**: Regular strategy analysis and updates
 - **Live Sessions**: Q&A sessions with creators
 - **Case Studies**: Detailed analysis of successful implementations
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ### Community Ratings & Reviews
@@ -402,6 +428,7 @@ Transparent feedback system for strategies and creators:
 - Documentation completeness
 - Creator responsiveness
 - Value for money
+
 </Card>
 
 <Card title="Creator Reputation" icon="award">
@@ -412,7 +439,9 @@ Transparent feedback system for strategies and creators:
 - Community engagement level
 - Long-term track record
 - Dispute resolution history
+
 </Card>
+
 </CardGroup>
 
 ## Marketplace Analytics
@@ -463,7 +492,9 @@ Marketplace Analytics Dashboard:
 - **Most Popular Strategies**: Highest subscriber counts
 - **Rising Stars**: Newest strategies with strong performance
 - **Creator Leaderboards**: Top creators by various metrics
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Quality Assurance & Safety
@@ -482,7 +513,8 @@ Ensuring marketplace quality and subscriber safety:
 - **Backtesting Validation**: Independent backtesting confirmation
 - **Live Testing**: Required live trading period before publication
 - **Ongoing Monitoring**: Continuous performance and compliance monitoring
-  </Accordion>
+
+</Accordion>
 
 <Accordion icon="exclamation-triangle" title="Risk Warnings & Disclosures">
 **Transparent risk communication:**
@@ -493,7 +525,9 @@ Ensuring marketplace quality and subscriber safety:
 - **Capital Requirements**: Minimum and recommended capital levels
 - **Complexity Warnings**: Skill level requirements for strategy use
 - **Regulatory Disclaimers**: Appropriate legal and regulatory warnings
-  </Accordion>
+
+</Accordion>
+
 </AccordionGroup>
 
 ## Next Steps
@@ -501,6 +535,7 @@ Ensuring marketplace quality and subscriber safety:
 <CardGroup cols={2}>
 <Card title="Publishing Your Strategy" icon="upload" href="/marketplace/publishing-strategies">
   Learn how to share your successful strategies with the community.
+
 </Card>
 
 <Card
@@ -509,6 +544,7 @@ Ensuring marketplace quality and subscriber safety:
   href="/getting-started/first-bot"
 >
   Deploy a marketplace strategy and start automated trading.
+
 </Card>
 
 <Card
@@ -517,11 +553,14 @@ Ensuring marketplace quality and subscriber safety:
   href="/portfolio/performance-analytics"
 >
   Monitor your marketplace strategy performance.
+
 </Card>
 
 <Card title="Trading Wizard" icon="magic-wand" href="/trading-strategies/trading-wizard">
   Get AI recommendations for marketplace strategies.
+
 </Card>
+
 </CardGroup>
 
 <Note>
@@ -529,4 +568,5 @@ Ensuring marketplace quality and subscriber safety:
   while creating earning opportunities for skilled traders. All strategies
   undergo rigorous review, but past performance doesn't guarantee future
   results.
+
 </Note>{" "}
